# qc-backend

./: .gitignore  Cargo.toml  Rocket.toml  config.json5  configuration.nix  diesel.toml  hard-update.sh  make_packages.sh  run-service.sh  thoughts.txt  update.sh
db/diesel/: db-first-test.sqlite  db_old.sqlite
db/diesel/migrations/20210329150332_create_posts_table/: up.sql
res/: everything.json
scripts/: form_to_pdf.sh  qc2 copy.bat  qc2.bat  qca1.bat
src/: admin_pwd.rs  copy_session.rs  database.rs  gen_pdf.rs  json_text.rs  main.rs  qc_checklist.rs  qurry_builder.rs  schema.rs  snapshots.rs  templates.rs  time.rs
src/database/: admin.rs  create.rs  errors.rs  mod.rs  schema.rs  update.rs
src/database/search/: compiler.rs  mod.rs  tokenizer.rs
static/: compiler.html  index.html  session_manager.html  single_consumer.html  tokenizer.html
static/src/: database.js  database_api.js  fun.js  qc_form.js  sessions.js
static/style/: main.css  printable.css
template_scripts/: filter_questions.rhai  is_complete.rhai  string_to_arr.rhai
templates/: database.html.hbs  pdf.svg.hbs  pdf2.svg.hbs  printable.html.hbs  qc_form.html.hbs
