[package]
name = "qc-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"]}
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["handlebars"] }

serde_json = "1.0"

diesel = { version = "2.1.0", features = ["sqlite", "time"] }
diesel-dynamic-schema = "0.2.1"
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_sqlite_pool"] }
diesel_migrations = "2.0"

time = {version = "0.3", features = ["serde"]}

serde = "1.0"

[global]
address = "0.0.0.0"
port = 8000